# DarkSiteOlympus_4.3.4

./: .gitignore  ADMIN_RESET_GUIDE.md  CMakeLists.txt  CREAR CUSTOM NPC.md  CUSTOMS SCRIPTS.md  Changelog.MD  NPC_PROMOCION.md  NPC_PROMOCION_README.md  README.md
sql/ARCHIVED/2023/: 01_06_23_00.sql  01_06_23_01.sql  01_06_23_02.sql  01_06_23_03.sql  02_06_2023_01.sql  02_06_2023_02.sql  02_06_2023_03.sql  02_06_2023_04.sql  02_06_2023_05.sql  02_06_2023_06.sql  02_06_2023_07.sql  02_06_2023_08.sql  02_06_2023_09.sql  02_06_2023_10.sql  02_06_2023_11.sql  03_06_2023_00.sql  03_06_2023_01.sql  03_06_2023_02.sql  03_06_2023_03.sql  03_06_2023_04.sql  03_06_2023_05.sql  04_06_2023_00.sql  04_06_2023_01.sql  04_06_2023_02.sql  04_06_2023_03.sql  05_06_2023_00.sql  05_06_2023_01.sql  05_06_2023_02.sql  05_06_2023_03.sql  06_06_2023_00.sql  06_06_2023_01.sql  09_06_2023_00.sql  09_06_2023_01.sql  27_05_23_All.sql  28_05_23_00.sql  30_05_23_00.sql  30_05_23_01.sql  30_05_23_02.sql  30_05_23_03.sql  31_05_23_00.sql  (+6 more)
sql/ARCHIVED/2024/: 04-02-24 Undead-player.sql  07-01-24 Guardian of Ancient Kings.sql  07-01-24 Spawn npc lost isle.sql  07-01-24 julak-doom.sql  07-01-24 npc_raciales.sql  07-01-24 object_door(cerrar puertas).sql  07-01-24 olympus_string.sql  07-01-24 quest_14283.sql  07-01-24 quest_poi.sql  07-01-24 quest_wargen.sql  07-01-24 quest_wargen_2.sql  07-01-24 spell_arcane_missiles.sql  10-02-24 World Update.sql  17-01-24  fix gossip Samuelson.sql  17-01-24  item_custom.sql  17-01-24  se busca un heroe uldum part2.sql  17-01-24  se busca un heroe uldum.sql  17-01-24 Correcciones_Trello_Tierras_Altas_Crepusculares.sql  17-01-24 call to arms.sql  17-01-24 string.sql  17-01-24 tierras crepusculares horda.sql  17-01-24 tierras crepusculares part2.sql  17-01-24 tierras crepusculares.sql  18-01-24 World Update.sql  20-01-24 Door Baradin Hold.sql  21-01-24-World Update.sql  22-01-24 Vashirj part 2.sql  23-01-24 Stalker-Baldios.sql  23-01-24 Vashirj part 3.sql  23-01-24 Waters of Farseeing.sql  23-01-24 World Boss.sql  23-01-24 olympus_string.sql  28-01-24 Vashirj part 4.sql
sql/BASE/auth/: auth.sql
sql/BASE/characters/: characters.sql
sql/CUSTOM/characters/: 2026_01_23_00_npc_promotion_log.sql  (+1 more)
sql/Progresion/: 4.06_proffesions.sql  disables2.0.sql  parche 4.0.6.sql  parche 4.2.2.sql  parche 4.3.4.sql  parche_4.06_08_07_23.sql
sql/UPDATE/: 1-03-24 fix quest 26706.sql  10-03-24 text 850000.sql  2-03-24 fix quest 27123.sql  2025_09_29_00_delete_spawn_npc_custom.sql  2025_09_29_locales_npc_42940.sql  5-03-2024 fix quest 24679.sql  7-03-2024  inflarar part 1.sql  delete smart_script.sql
(+540 files in other folders)
